JavaCC/JavaCC-5.0-master/Project/Converter/TimeConverter.java
/* Generated By:JavaCC: Do not edit this line. TimeConverter.java */
class TimeConverter implements TimeConverterConstants {
    static int er = 0;
    public static void main(String[] args)
    throws ParseException, TokenMgrError, NumberFormatException {
        System.out.println("Welcome to the time equivilance converter");
        System.out.println("enter a number followed by a unit ('5s' or '5 seconds') and it will be converted into various units of time");
        System.out.println("Alternativley, enter '?' or 'help' for additional info");
    try {
        TimeConverter parser = new TimeConverter(System.in);
        parser.Start();
    } catch (TokenMgrError e) {
        if (er != 1){
        System.out.println("Invalid input. Please enter a number followed by a unit ('5s' or '5 seconds'), or '?' or 'help' for additional info.");
        }
    }
        System.out.println("Thank you for using the time converter.");
    }

  static final public void Start() throws ParseException, ParseException, NumberFormatException, TokenMgrError {
        double value = 0;
        String unit = "";
        String help = "";
        String error = "none";
    try {


        value = Primary();
        unit = Unit();
    } catch (ParseException e1) {
        try {
            help = Help();
            if (help.equals("help")) {
                System.out.println("Units of time and their value in seconds:");
                System.out.println("Seconds = 1");
                System.out.println("Minutes = 60");
                System.out.println("Hours = 3600");
                System.out.println("Days = 86400");
                System.out.println("Months = 2592000");
                System.out.println("Years = 31536000");
                System.out.println("--------------------\nValid inputs:");
                System.out.println("Number: 54, 2, etc");
                System.out.println("Unit: s, seconds, m, minutes, h, hours, d, days, M, months, y, years");
                System.out.println("Misc: ?, help");

            }
        } catch (ParseException e2) {
            error = "one";
        }
    } catch (TokenMgrError e3) {
        error = "one";
    }
        if (error.equals("one") && help.equals("")) {
            System.out.println("Invalid input. Please enter a positive number followed by a valid unit.\nIf you need help, type '?'");
            er = 1;
        }
        else if(help.equals("help")){
            {if (true) return;}
        }
        else{
            System.out.println(value + " " + unit + " is equivalent to:");


            if (unit.equals("minutes")) {
                value = value * 60;
            } else if (unit.equals("hours")) {
                value = value * 3600;
            } else if (unit.equals("days")) {
                value = value * 86400;
            } else if (unit.equals("months")) {
                value = value * 2592000;  // 30 days * 24 hours * 60 minutes * 60 seconds
            } else if (unit.equals("years")) {
                value = value * 31536000;  // 365 days * 24 hours * 60 minutes * 60 seconds
            }

            // Print the value in different units
            System.out.println(value + " seconds");
            System.out.println(value / 60 + " minutes");
            System.out.println(value / 3600 + " hours");
            System.out.println(value / 86400 + " days");
            System.out.println(value / 2592000 + " months");
            System.out.println(value / 31536000 + " years");
        }
    jj_consume_token(EOL);
  }

  static final public String Help() throws ParseException {
    Token t;
    t = jj_consume_token(HELP);
                {if (true) return "help";}
    throw new Error("Missing return statement in function");
  }

  static final public double Primary() throws ParseException, NumberFormatException {
    Token t;
    t = jj_consume_token(NUM);
               {if (true) return Double.parseDouble(t.image);}
    throw new Error("Missing return statement in function");
  }

  static final public String Unit() throws ParseException {
    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SECOND:
      t = jj_consume_token(SECOND);
                   {if (true) return "seconds";}
      break;
    case MINUTE:
      t = jj_consume_token(MINUTE);
                     {if (true) return "minutes";}
      break;
    case HOUR:
      t = jj_consume_token(HOUR);
                   {if (true) return "hours";}
      break;
    case DAY:
      t = jj_consume_token(DAY);
                  {if (true) return "days";}
      break;
    case MONTH:
      t = jj_consume_token(MONTH);
                    {if (true) return "months";}
      break;
    case YEAR:
      t = jj_consume_token(YEAR);
                   {if (true) return "years";}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public TimeConverterTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[1];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x3f0,};
   }

  /** Constructor with InputStream. */
  public TimeConverter(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public TimeConverter(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new TimeConverterTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public TimeConverter(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new TimeConverterTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public TimeConverter(TimeConverterTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(TimeConverterTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[11];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 1; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 11; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
